implement new view system